@@ -83,6 +83,7 @@ Models
  hmmestimate 
  hmmgenerate 
  hmmviterbi
+ slicesample
 Hypothesis testing
  anderson_darling_test
  runstest
